--- a/styles/blocks/_gallery.scss
+++ b/styles/blocks/_gallery.scss
@@ -19,7 +19,7 @@
     @include square(rem(225));
     cursor: pointer;
     overflow: hidden;
-    background-color: var(--color-white);
+    background-color: transparent;
     border-radius: rem(20);
     border: rem(3) solid var(--color-white);
     transition-duration: var(--transition-duration-short);
@@ -35,6 +35,7 @@
 
     &:hover {
       transform: scale(1.05);
+      background-color: var(--color-black);
     }
 
     &:hover img {
@@ -57,10 +58,6 @@
     transform: translateY(rem(150));
     // opacity: 0;
     transition-duration: var(--transition-duration-short);
-
-    &-content {
-      height: 100%; // max-height: 200px
-    }
 
     &-title {
       font-weight: 700;
